src/objects/Personal_Asset__c.object
<CustomObject>
    <description>Personal Assets of Household Members</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>This would be your checking/savings/stoccks/bonds account number.</description>
        <inlineHelpText>This would be your checking/savings/stoccks/bonds account number.</inlineHelpText>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_of_Business__c</fullName>
        <label>Address of Business</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_Earned_Per_Year_from_Business__c</fullName>
        <label>Amount Earned Per Year from Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_of_Gift_Deposited_into_Rec_Acct__c</fullName>
        <description>Amount of Gift / Donation Deposited to Recipient&apos;s Account</description>
        <inlineHelpText>Amount of Gift / Donation Deposited to Recipient&apos;s Account</inlineHelpText>
        <label>Amount of Gift Deposited into Rec. Acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Stocks</fullName>
                </value>
                <value>
                    <fullName>Bonds</fullName>
                </value>
                <value>
                    <fullName>Mutual Fund</fullName>
                </value>
                <value>
                    <fullName>Trust Fund</fullName>
                </value>
                <value>
                    <fullName>Annuity</fullName>
                </value>
                <value>
                    <fullName>Profit-Sharing Plan</fullName>
                </value>
                <value>
                    <fullName>Defined Benefit Plan</fullName>
                </value>
                <value>
                    <fullName>Money Purchase Plan</fullName>
                </value>
                <value>
                    <fullName>ESOP</fullName>
                </value>
                <value>
                    <fullName>Governmental Plan</fullName>
                </value>
                <value>
                    <fullName>409A Nonqualified Deferred Comp</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Inheritance</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
                <value>
                    <fullName>Pension</fullName>
                </value>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>Roth IRA</fullName>
                </value>
                <value>
                    <fullName>401k</fullName>
                </value>
                <value>
                    <fullName>403b</fullName>
                </value>
                <value>
                    <fullName>SIMPLE IRA</fullName>
                </value>
                <value>
                    <fullName>SEP</fullName>
                </value>
                <value>
                    <fullName>SARSEP</fullName>
                </value>
                <value>
                    <fullName>Payroll Deduction IRA</fullName>
                </value>
                <value>
                    <fullName>457 Plan</fullName>
                </value>
                <value>
                    <fullName>529 Plan</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Value__c</fullName>
        <formula>CASE(RecordType.Name,
&quot;Assets with an Account&quot;, Cash_or_Market_Value__c,
&quot;Cash without an Account&quot;, Total_Cash_Not_Deposited_in_Any_Account__c,
&quot;Gifts&quot;, Current_Cash_Value_of_Gift__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_or_Market_Value__c</fullName>
        <label>Cash or Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Cash_Value_of_Gift__c</fullName>
        <label>Current Cash Value of Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Value_of_Land__c</fullName>
        <label>Current Value of Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Gift_Letter__c</fullName>
        <label>Date of Gift Letter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Statement__c</fullName>
        <label>Date of Most Recent Statement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escrow_Account_Number__c</fullName>
        <label>Escrow Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escrow_Acct_Institution_Address__c</fullName>
        <label>Escrow Acct - Institution Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escrow_Acct_Institution_Name__c</fullName>
        <label>Escrow Acct - Institution Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escrow_Acct_Institution_Phone_Number__c</fullName>
        <label>Escrow Acct - Institution Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Escrow_Amount_Deposited__c</fullName>
        <label>Escrow Amount Deposited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escrow_Date_of_Deposit__c</fullName>
        <label>Escrow Date of Deposit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escrow_Type_of_Account__c</fullName>
        <label>Escrow Type of Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Stocks</fullName>
                </value>
                <value>
                    <fullName>Bonds</fullName>
                </value>
                <value>
                    <fullName>Mutual Fund</fullName>
                </value>
                <value>
                    <fullName>Trust Fund</fullName>
                </value>
                <value>
                    <fullName>Annuity</fullName>
                </value>
                <value>
                    <fullName>Pension</fullName>
                </value>
                <value>
                    <fullName>SIMPLE IRA</fullName>
                </value>
                <value>
                    <fullName>SEP</fullName>
                </value>
                <value>
                    <fullName>SARSEP</fullName>
                </value>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>Roth IRA</fullName>
                </value>
                <value>
                    <fullName>401k</fullName>
                </value>
                <value>
                    <fullName>403b</fullName>
                </value>
                <value>
                    <fullName>Profit-Sharing Plan</fullName>
                </value>
                <value>
                    <fullName>Defined Benefit Plan</fullName>
                </value>
                <value>
                    <fullName>Money Purchase Plan</fullName>
                </value>
                <value>
                    <fullName>ESOP</fullName>
                </value>
                <value>
                    <fullName>Governmental Plan</fullName>
                </value>
                <value>
                    <fullName>457 Plan</fullName>
                </value>
                <value>
                    <fullName>409A Nonqualified Deferred Comp</fullName>
                </value>
                <value>
                    <fullName>529 Plan</fullName>
                </value>
                <value>
                    <fullName>Inheritance</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GR_Acct_Inst_Date_of_Last_Statement__c</fullName>
        <label>GR Acct. Inst. - Date of Last Statement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GR_Acct_Inst_Phone__c</fullName>
        <description>Gift Recipient&apos;s Account Institution Phone Number</description>
        <inlineHelpText>Gift Recipient&apos;s Account Institution Phone Number</inlineHelpText>
        <label>GR Acct. Inst. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GR_Acct_Most_Recent_Balance__c</fullName>
        <label>GR Acct. - Most Recent Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Funds_Bank_Depository_Account__c</fullName>
        <label>Gift Funds Bank/Depository Account#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Funds_Location_Address__c</fullName>
        <label>Gift Funds Location: Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gift_Funds_Location_Bank_Depository_Name__c</fullName>
        <label>Gift Funds Location-Bank/Depository Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Funds_Location_Phone__c</fullName>
        <label>Gift Funds Location: Phone#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Gift_Funds_Type_Other_description__c</fullName>
        <label>Gift Funds Type - Other description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Funds_Type_of_Account__c</fullName>
        <label>Gift Funds Type of Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Stocks</fullName>
                </value>
                <value>
                    <fullName>Bonds</fullName>
                </value>
                <value>
                    <fullName>Mutual Fund</fullName>
                </value>
                <value>
                    <fullName>Trust Fund</fullName>
                </value>
                <value>
                    <fullName>Annuity</fullName>
                </value>
                <value>
                    <fullName>Pension</fullName>
                </value>
                <value>
                    <fullName>SIMPLE IRA</fullName>
                </value>
                <value>
                    <fullName>SEP</fullName>
                </value>
                <value>
                    <fullName>SARSEP</fullName>
                </value>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>Roth IRA</fullName>
                </value>
                <value>
                    <fullName>401k</fullName>
                </value>
                <value>
                    <fullName>403b</fullName>
                </value>
                <value>
                    <fullName>Profit-Sharing Plan</fullName>
                </value>
                <value>
                    <fullName>Defined Benefit Plan</fullName>
                </value>
                <value>
                    <fullName>Money Purchase Plan</fullName>
                </value>
                <value>
                    <fullName>ESOP</fullName>
                </value>
                <value>
                    <fullName>Governmental Plan</fullName>
                </value>
                <value>
                    <fullName>457 Plan</fullName>
                </value>
                <value>
                    <fullName>409A Nonqualified Deferred Comp</fullName>
                </value>
                <value>
                    <fullName>529 Plan</fullName>
                </value>
                <value>
                    <fullName>Inheritance</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_Recipient_Account_Address__c</fullName>
        <label>Gift Recipient Account Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gift_Recipient_Account_Institution_Name__c</fullName>
        <label>Gift Recipient Account Institution Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Recipient_s_Account_Number__c</fullName>
        <label>Gift Recipient&apos;s Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gifter_Donor_Address__c</fullName>
        <label>Gifter/Donor Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gifter_Donor_Name__c</fullName>
        <label>Gifter/Donor Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gifter_Donor_Phone_Number__c</fullName>
        <label>Gifter/Donor Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Gifter_Donor_Relationship_to_Recipient__c</fullName>
        <label>Gifter/Donor Relationship to Recipient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Registered Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Step Brother</fullName>
                </value>
                <value>
                    <fullName>Step Sister</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Nephew</fullName>
                </value>
                <value>
                    <fullName>Niece</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Great Grandparent</fullName>
                </value>
                <value>
                    <fullName>Father-In-Law</fullName>
                </value>
                <value>
                    <fullName>Mother-In-Law</fullName>
                </value>
                <value>
                    <fullName>Brother-In-Law</fullName>
                </value>
                <value>
                    <fullName>Sister-In-Law</fullName>
                </value>
                <value>
                    <fullName>Son-In-Law</fullName>
                </value>
                <value>
                    <fullName>Daughter-In-Law</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Personal Assets for all Household Members</relationshipLabel>
        <relationshipName>Personal_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_Member_Name__c</fullName>
        <formula>Household_Member__r.Full_Contact_Name__c</formula>
        <label>Household Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Member__c</fullName>
        <label>Household Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Household_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Personal Assets</relationshipLabel>
        <relationshipName>Personal_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_this_a_joint_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this a joint account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land_Address_or_Parcel_Desc__c</fullName>
        <label>Land Address or Parcel Desc.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Land_Earned_Income_Per_Year__c</fullName>
        <label>If yes, earned income per year:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Landowner_Earns_Income_from_Land__c</fullName>
        <label>Landowner Earns Income from Land?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Recent_Balance__c</fullName>
        <label>Most Recent Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_Business__c</fullName>
        <label>Name of Business</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Institution__c</fullName>
        <label>Name of Institution</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_joint_account_holders__c</fullName>
        <label>Name of joint account holders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_if_Other__c</fullName>
        <description>If &quot;Other&quot; is selected for Gifter/Donor Relationship to Recipient, please clarify the relationship here.</description>
        <inlineHelpText>If &quot;Other&quot; is selected for Gifter/Donor Relationship to Recipient, please clarify the relationship here.</inlineHelpText>
        <label>Relationship, if Other</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_Asset_Type__c</fullName>
        <formula>OR(
ISPICKVAL(Asset_Type__c, &quot;Pension&quot;),
ISPICKVAL(Asset_Type__c, &quot;IRA&quot;),
ISPICKVAL(Asset_Type__c, &quot;Roth IRA&quot;),
ISPICKVAL(Asset_Type__c, &quot;401k&quot;),
ISPICKVAL(Asset_Type__c, &quot;403b&quot;),
ISPICKVAL(Asset_Type__c, &quot;SIMPLE IRA&quot;),
ISPICKVAL(Asset_Type__c, &quot;SEP&quot;),
ISPICKVAL(Asset_Type__c, &quot;SARSEP&quot;),
ISPICKVAL(Asset_Type__c, &quot;Payroll Deduction IRA&quot;),
ISPICKVAL(Asset_Type__c, &quot;457 Plan&quot;),
ISPICKVAL(Asset_Type__c, &quot;529 Plan&quot;)
)</formula>
        <label>Retirement Asset Type?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Settlement_or_Other_Description__c</fullName>
        <label>Settlement or Other Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Bond_Description__c</fullName>
        <label>Stock/Bond Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Not_Deposited_in_Any_Account__c</fullName>
        <label>Total Cash Not Deposited in Any Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Withdrawn_From_Acct_Inst_Account_Number__c</fullName>
        <description>Withdrawn-From Account Institution Account #</description>
        <inlineHelpText>Withdrawn-From Account Institution Account #</inlineHelpText>
        <label>Withdrawn-From Acct Inst. Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawn_From_Acct_Inst_Address__c</fullName>
        <description>Withdrawn-From Account Institution Address</description>
        <inlineHelpText>Withdrawn-From Account Institution Address</inlineHelpText>
        <label>Withdrawn-From Acct Inst. Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Withdrawn_From_Acct_Inst_Name__c</fullName>
        <description>Withdrawn-From Account Institution Name</description>
        <inlineHelpText>Withdrawn-From Account Institution Name</inlineHelpText>
        <label>Withdrawn-From Acct Inst. Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawn_From_Acct_Inst_Phone__c</fullName>
        <description>Withdrawn-From Account Institution Phone</description>
        <inlineHelpText>Withdrawn-From Account Institution Phone</inlineHelpText>
        <label>Withdrawn-From Acct Inst. Phone</label>
        <type>Phone</type>
    </fields>
    <label>Personal Asset</label>
    <nameField>
        <displayFormat>HHMA-{YY}-{0}</displayFormat>
        <label>Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Assets</pluralLabel>
    <recordTypes>
        <fullName>Assets_with_an_Account</fullName>
        <active>true</active>
        <description>Assets that are part of instutionalized accounts (Checking, Savings, Stocks, Bonds, Mutual Funds, IRAs, etc.)</description>
        <label>Assets with an Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Ownership</fullName>
        <active>true</active>
        <description>Description of Business Owned by Household Member</description>
        <label>Business Ownership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cash_without_an_Account</fullName>
        <active>true</active>
        <description>Cash monies that are not held in any accounts.</description>
        <label>Cash without an Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gifts</fullName>
        <active>true</active>
        <description>Gift funds/donations received from others.</description>
        <label>Gifts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Land_Ownership</fullName>
        <active>true</active>
        <description>Description of Land Owned by Household Member</description>
        <label>Land Ownership</label>
    </recordTypes>
    <recordTypes>
        <fullName>No_Assets</fullName>
        <active>true</active>
        <label>No Assets</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Land_Earned_Income_Amt_Required_if_Yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
(ISPICKVAL(Landowner_Earns_Income_from_Land__c, &apos;Yes&apos;),
 ISBLANK(Land_Earned_Income_Per_Year__c))</errorConditionFormula>
        <errorMessage>Annual income amount is required if landowner earns income from this land.</errorMessage>
    </validationRules>
</CustomObject>